--- a/resume.html
+++ b/resume.html
@@ -19,39 +19,37 @@
 
 <div class="resume-div center" >     
 <div class="row">
-<div class="column col1" style="background-color: #102d13;">
+<div class="column col1">
     <section class="first-section">
         <div class="first-subhead-div"><h2>CONTACT</h2></div>
-        <div class="contact" style="justify-content: center;">
-            <table class="list" style="color: #ffffff;"> 
-                <tr><td><a href="https://www.facebook.com/anupriya.mohan.942"><i class="fa-brands fa-square-facebook" style="font-size: 40px;color: white;"></i></a></td></tr>
-                <tr><td><a href="https://www.instagram.com/i_anupriya.mohan/?igshid=MWI4MTIyMDE%3D"></a><i class="fa-brands fa-square-instagram" style="font-size: 40px;"></i></td></tr>
-            </table>
+        <div class="contact">
+            <div class="list contact_div"> 
+                <div><a href="https://www.facebook.com/anupriya.mohan.942"><i class="fa-brands fa-square-facebook" style="font-size: 40px;color: white;"></i></a></div>
+                <div><a href="https://www.instagram.com/i_anupriya.mohan/?igshid=MWI4MTIyMDE%3D"></a><i class="fa-brands fa-square-instagram" style="font-size: 40px;"></i></div>
+            </div>
          </div>
 </section>
     <section class="first-section">
         <div class="first-subhead-div"><h2>EDUCATION</h2></div>
-        <table class="list" style=" color: white;">
-            <tr><td><strong>APRIL 2023</strong></td></tr>
-        <tr>
-            <td> Certificate in Multimedia Communication, &nbsp; <a href="https://www.yukonu.ca" style="color: rgb(115, 189, 189);"> Yukon University, Canada</a></td>
-        </tr>
-        <tr><td><strong>APRIL 2022</strong></td></tr>
-        <tr>
-            <td> Certificate in General Studies with Honor,  &nbsp; <a href="https://www.yukonu.ca" style="color: rgb(115, 189, 189);"> Yukon University, Canada</a></td>
-        </tr>
-        <tr><td><strong>NOVEMBER 2017</strong></td></tr>
-        <tr>
-            <td> Graduation in Computer Applications,  &nbsp; <a href="https://www.mgu.ac.in" style="color: rgb(115, 189, 189);"> Mahatma Gandhi University, Kerala, India</a></td>
-        </tr>
-        </tr>
-    </table>
+        <div class="list col">
+            <div>
+                <strong>APRIL 2023</strong>
+                Certificate in Multimedia Communication, &nbsp; <a href="https://www.yukonu.ca" style="color: rgb(115, 189, 189);"> Yukon University, Canada</a>
+            </div>
+            <div>
+                <strong>APRIL 2022</strong>
+                Certificate in General Studies with Honor,  &nbsp; <a href="https://www.yukonu.ca" style="color: rgb(115, 189, 189);"> Yukon University, Canada</a>
+            </div>
+            <div>
+                <strong>NOVEMBER 2017</strong> Graduation in Computer Applications,  &nbsp; <a href="https://www.mgu.ac.in" style="color: rgb(115, 189, 189);"> Mahatma Gandhi University, Kerala, India</a>
+            </div>
+    </div>
 </section>
 
 
         <section class="third-section">       
             <div class="first-subhead-div"><h2>SKILLS</h2></div>
-            <ul class="list" style=" color: white;">
+            <ul class="list col">
                 
                 <li>Experience with front end technologies, Adobe Lightrooms, Illustrator, Photoshop, Premier pro, and Indesign </li>
                 <li>Database: phpMyAdmin, MYSQL</li>
@@ -70,7 +68,7 @@
 </div>
 
 
-<div class="column col2" style="background-color: #ffffff;">
+<div class="column col2">
         
     <section class="second-section">
         <div class="subhead-div"><h2>SUMMARY</h2></div>
